# AID-Commander-v4

./: .env.template  .gitignore  CLAUDE.md  IMPLEMENTATION_SUMMARY.md  README.md  aid_commander.py  context_engine.py  conversation_manager.py  memory_service.py  pyproject.toml  quality_gates.py  test_basic.py
config/: __init__.py  settings.py
docs/: ADVANCED_GUIDE.md  BEGINNER_GUIDE.md  FAQ.md  IDE_INTEGRATION.md  INTERMEDIATE_GUIDE.md
tests/: __init__.py  test_memory_service.py
utils/: __init__.py  encryption.py  performance.py  validation.py
